--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,12 @@ project(HelloWorld DESCRIPTION "A hello world project" VERSION 0.0.1)
 # ———————————————————————————
 
 find_package(fmt CONFIG REQUIRED)
+find_package(range-v3 CONFIG REQUIRED)
 
 # —————————————————————————————
 # create target for main binary
 # —————————————————————————————
 add_executable(main src/main.cpp)
-target_compile_features(main PUBLIC cxx_std_17)
-target_link_libraries(main PRIVATE fmt::fmt)
+# target_compile_features(main PUBLIC cxx_std_17)
+target_link_libraries(main PUBLIC fmt::fmt)
+target_link_libraries(main PUBLIC range-v3)
